style.css
:root {
    --green1: #73a383;
    --green2: #82ad90;
    --green3: #92b79d;
    --green4: #a1c1ab;
    --green5: #b0cbb8;
    --green6: rgb(63, 95, 73);

    --dark1: #121212;
    --dark2: #282828;
    --dark3: #3f3f3f;
    --dark4: #575759; 
    --dark5: #717171;
    --dark6: #8b8b8b;

    --light1: #fbfbfe;
    --light2: #e5e5e5;
    /* --light3: rgb(214, 214, 214); */
    --light3: #c4c4c4;

}

* {
    /* asterisk selects all elements */
    scroll-behavior: smooth;
    margin: 0;
    padding: 0;
    line-height: 1.6;
    color-scheme: light dark;
    /* color scheme will adapt to user pref */
}

body {
    box-sizing: border-box;
    /* content-box - border + padding adds to size
        border-box - content shrinks to fit size */

    font-family:'Noto Sans', 'Open Sans', 'Inter', Consolas, serif;
    font-size: 100%;
    text-rendering: optimizeLegibility;
    background: light-dark(var(--light1), var(--dark2));
}

/* header, navbar */
header {
    display: flex;
    background: light-dark(var(--green1), var(--dark1));
    height: 3em;
    justify-content: center;
    align-items: center;
}

.nav-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 800px;
}

header ::selection {
    background-color: light-dark(var(--green5), var(--green1));
}

#logo {
    color: light-dark(black, var(--light1));
    font-weight: bold;
    text-decoration: none;
    font-size: 1.25em;
}

#logo:hover {
    color: light-dark(black, var(--green1));
    text-decoration: underline;
}

nav {
    color: light-dark(black, var(--light1));
}

nav a {
    color: light-dark(black, var(--light1));
    text-decoration: none;
}

nav a:hover {
    color: light-dark(black, var(--green2));
    text-decoration: underline;
}

/* main site content */
main {
    display: flex;
    flex-direction: column;
    width: 800px;

    margin: 1rem auto;
    /* top right bottom left */

    color: light-dark(black, var(--light1));
}

main ::selection {
    color: var(--light1);
    background-color: var(--green1);
}

p {
    margin: 0 0 1em;
    /* top right bottom left */
}

#page-home {
    /* width: 800px; */
    /* margin: 1rem auto 0; */
}

#page-project-writeup {
    /* width: 800px; */
    /* margin: 1rem auto 10em; */
    margin-bottom: 10em;
}

#page-project-writeup img {
    display: block;
    max-width: 620px; 
    margin: 1rem auto;
    border: 11px solid light-dark(var(--light2), var(--dark4));
    
}

#page-project-directory {
    font-size: 1.1em;
   
}

.project-item {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.project-name {
}

ol.directory {
    list-style-type: none;
}

ol.directory li.item {
    margin-bottom: 1em;
}

ol.directory p.date {
    margin: 0;
    float: right;
}

ol.directory p.summary {

}

ul {
    padding-left: 2em;
}

.tags {
    font-size: 0.9em;
    color: light-dark(var(--dark4), var(--light3));
}

.date {
    color: var(--dark6);
    /* font-size: 14px; */
    font-size: 0.9em;
}

/* footer */
footer {
    margin-bottom: 1em;
    font-size: 0.8em;
    text-align: center;
}

#footer-home {
    text-align: left;
    font-size: 0.9em;
}

footer a {
    color: light-dark(var(--green6), var(--green1));
    text-decoration: none;
}

footer a:hover {
    text-decoration: underline;
}

footer a:visited {
    color: light-dark(var(--green6), var(--green1));
}

/* link behavior */
main a {
    color: light-dark(black, var(--light1));
    text-decoration: none;
}

main a:hover {
    color: var(--green1);
    text-decoration: underline;
}

main a:visited {
    color: light-dark(var(--green6), var(--green1))
}


/* content response to screen size */
@media screen and (max-width: 820px) {
    .nav-container {
        max-width: 90%;
        min-width: calc(360px * .9);
    }

    #page-project-writeup {
        max-width: 90%;
        min-width: calc(360px * .9);

    }   
}

@media screen and (max-width: 775px) {
    #page-project-writeup img {
        max-width: 90%;
   }
}

/* @media screen and (max-width:) */

/* @media (prefers-color-scheme: dark) {
    header {
        background: #1c1b22;
        border-bottom: 1px solid;
        border-color: rgb(228, 228, 228);
    }
} */

